@@ -1,110 +1,110 @@
-man_MANS = \
-           XtActHook.3 \
-           XtAddAct.3 \
-           XtAddCbk.3 \
-           XtAddEHand.3 \
-           XtAddETReg.3 \
-           XtAddGrab.3 \
-           XtAddIn.3 \
-           XtAllocGC.3 \
-           XtAppAAct.3 \
-           XtAppAC.3 \
-           XtAppAI.3 \
-           XtAppASig.3 \
-           XtAppATO.3 \
-           XtAppAWP.3 \
-           XtAppCSh.3 \
-           XtAppE.3 \
-           XtAppEM.3 \
-           XtAppGEDB.3 \
-           XtAppGSTO.3 \
-           XtAppInit.3 \
-           XtAppLock.3 \
-           XtAppNEv.3 \
-           XtAppRCR.3 \
-           XtAppSEF.3 \
-           XtAppSTC.3 \
-           XtAppSetFR.3 \
-           XtBEMask.3 \
-           XtBlockH.3 \
-           XtCallAFoc.3 \
-           XtCallActP.3 \
-           XtCallCbks.3 \
-           XtClass.3 \
-           XtClickT.3 \
-           XtConfWid.3 \
-           XtConvSt.3 \
-           XtConvert.3 \
-           XtCreACon.3 \
-           XtCreASh.3 \
-           XtCrePSh.3 \
-           XtCreWid.3 \
-           XtCreWin.3 \
-           XtCreateSR.3 \
-           XtDStrCW.3 \
-           XtDisACon.3 \
-           XtDisplay.3 \
-           XtDisplayI.3 \
-           XtErr.3 \
-           XtErrM.3 \
-           XtExtEvDis.3 \
-           XtFindF.3 \
-           XtGEDB.3 \
-           XtGetANC.3 \
-           XtGetActK.3 \
-           XtGetActL.3 \
-           XtGetAres.3 \
-           XtGetClExt.3 \
-           XtGetDisp.3 \
-           XtGetGC.3 \
-           XtGetKFoc.3 \
-           XtGetRList.3 \
-           XtGetSP.3 \
-           XtGetSR.3 \
-           XtGetSTO.3 \
-           XtGetSVal.3 \
-           XtGetSValI.3 \
-           XtGetSres.3 \
-           XtGrabKey.3 \
-           XtHookOD.3 \
-           XtInit.3 \
-           XtInitWC.3 \
-           XtKeysym.3 \
-           XtLastProc.3 \
-           XtMakGReq.3 \
-           XtMalloc.3 \
-           XtManChild.3 \
-           XtMapWid.3 \
-           XtName.3 \
-           XtNameTWid.3 \
-           XtNextEv.3 \
-           XtOffset.3 \
-           XtOpenApp.3 \
-           XtOwnSel.3 \
-           XtParATab.3 \
-           XtParTTab.3 \
-           XtParent.3 \
-           XtPopdown.3 \
-           XtPopup.3 \
-           XtProcLock.3 \
-           XtQueryGeo.3 \
-           XtRealize.3 \
-           XtRegDraw.3 \
-           XtRegGA.3 \
-           XtResPA.3 \
-           XtResPath.3 \
-           XtSession.3 \
-           XtSetArg.3 \
-           XtSetKFoc.3 \
-           XtSetKTr.3 \
-           XtSetLangP.3 \
-           XtSetSP.3 \
-           XtSetSens.3 \
-           XtSetVal.3 \
-           XtSetWMC.3 \
-           XtStrCW.3 \
-           XtThreadI.3 \
-           XtTransC.3 \
-           XtVaCrArgL.3
+man3_MANS = \
+	XtAddActions.man \
+	XtAddCallback.man \
+	XtAddEventHandler.man \
+	XtAddExposureToRegion.man \
+	XtAddGrab.man \
+	XtAddInput.man \
+	XtAllocateGC.man \
+	XtAppAddActionHook.man \
+	XtAppAddActions.man \
+	XtAppAddBlockHook.man \
+	XtAppAddConverter.man \
+	XtAppAddInput.man \
+	XtAppAddSignal.man \
+	XtAppAddTimeOut.man \
+	XtAppAddWorkProc.man \
+	XtAppCreateShell.man \
+	XtAppError.man \
+	XtAppErrorMsg.man \
+	XtAppGetErrorDatabase.man \
+	XtAppGetSelectionTimeout.man \
+	XtAppInitialize.man \
+	XtAppLock.man \
+	XtAppNextEvent.man \
+	XtAppReleaseCacheRefs.man \
+	XtAppSetExitFlag.man \
+	XtAppSetFallbackResources.man \
+	XtAppSetTypeConverter.man \
+	XtBuildEventMask.man \
+	XtCallAcceptFocus.man \
+	XtCallActionProc.man \
+	XtCallCallbacks.man \
+	XtClass.man \
+	XtConfigureWidget.man \
+	XtConvert.man \
+	XtConvertAndStore.man \
+	XtCreateApplicationContext.man \
+	XtCreateApplicationShell.man \
+	XtCreatePopupShell.man \
+	XtCreateSelectionRequest.man \
+	XtCreateWidget.man \
+	XtCreateWindow.man \
+	XtDisplay.man \
+	XtDisplayInitialize.man \
+	XtDisplayStringConversionWarning.man \
+	XtDisplayToApplicationContext.man \
+	XtError.man \
+	XtErrorMsg.man \
+	XtFindFile.man \
+	XtGetActionKeysym.man \
+	XtGetActionList.man \
+	XtGetApplicationNameAndClass.man \
+	XtGetApplicationResources.man \
+	XtGetClassExtension.man \
+	XtGetDisplays.man \
+	XtGetErrorDatabase.man \
+	XtGetGC.man \
+	XtGetKeyboardFocusWidget.man \
+	XtGetKeysymTable.man \
+	XtGetResourceList.man \
+	XtGetSelectionParameters.man \
+	XtGetSelectionRequest.man \
+	XtGetSelectionTimeout.man \
+	XtGetSelectionValue.man \
+	XtGetSelectionValueIncremental.man \
+	XtGetSubresources.man \
+	XtGrabKey.man \
+	XtHooksOfDisplay.man \
+	XtInitialize.man \
+	XtInitializeWidgetClass.man \
+	XtInsertEventTypeHandler.man \
+	XtLastEventProcessed.man \
+	XtMakeGeometryRequest.man \
+	XtMalloc.man \
+	XtManageChildren.man \
+	XtMapWidget.man \
+	XtName.man \
+	XtNameToWidget.man \
+	XtNextEvent.man \
+	XtOffset.man \
+	XtOpenApplication.man \
+	XtOwnSelection.man \
+	XtParent.man \
+	XtParseAcceleratorTable.man \
+	XtParseTranslationTable.man \
+	XtPopdown.man \
+	XtPopup.man \
+	XtProcessLock.man \
+	XtQueryGeometry.man \
+	XtRealizeWidget.man \
+	XtRegisterDrawable.man \
+	XtRegisterGrabAction.man \
+	XtReservePropertyAtom.man \
+	XtResolvePathname.man \
+	XtSessionGetToken.man \
+	XtSetArg.man \
+	XtSetKeyTranslator.man \
+	XtSetKeyboardFocus.man \
+	XtSetLanguageProc.man \
+	XtSetMultiClickTime.man \
+	XtSetSelectionParameters.man \
+	XtSetSensitive.man \
+	XtSetValues.man \
+	XtSetWMColormapWindows.man \
+	XtStringConversionWarning.man \
+	XtToolkitThreadInitialize.man \
+	XtTranslateCoords.man \
+	XtVaCreateArgsList.man
 
-EXTRA_DIST=$(man_MANS)
+EXTRA_DIST=$(man3_MANS)
