@@ -1,3 +1,7 @@
+2005-05-22  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* man/Makefile.am: Convert man pages to long file names
+
 2005-05-21  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac: Check for <alloca.h> and define INCLUDE_ALLOCA_H
